--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,16 @@
             android:paddingBottom="16dp"
             android:scaleType="fitCenter" />
 
+        <EditText
+            android:id="@+id/editTextMovieName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Ingrese el nombre de la película"
+            android:inputType="text"
+            android:layout_marginTop="16dp"
+            android:layout_marginHorizontal="16dp"/>
+
+
         <Button
             android:id="@+id/btnSearch"
             android:layout_width="wrap_content"
